--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,26 @@
+cairocffi==0.7.2
+CairoSVG==1.0.19
+cffi==1.4.2
 coverage==3.7.1
+cssselect==0.9.1
 Flask==0.10.1
 Flask-SQLAlchemy==2.0
+Flask-WeasyPrint==0.5
 Flask-WTF==0.12
+html5lib==0.9999999
 itsdangerous==0.24
 Jinja2==2.8
+lxml==3.4.4
 MarkupSafe==0.23
 nose==1.3.4
+Pillow==3.1.0
+pycparser==2.14
+Pyphen==0.9.3
 pytz==2015.7
+six==1.10.0
 SQLAlchemy==1.0.11
+tinycss==0.3
+WeasyPrint==0.25
 Werkzeug==0.11.3
 wheel==0.24.0
 WTForms==2.1
