--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Flask==0.10.1
 Flask-SQLAlchemy==2.0
 Flask-WeasyPrint==0.5
 Flask-WTF==0.12
+gunicorn==19.4.5
 html5lib==0.9999999
 itsdangerous==0.24
 Jinja2==2.8
